# nodrat

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INDEX.md  README.md  docker-compose.dev.yml  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260501_1900_init_extensions.py  20260501_2000_add_users_sessions.py  20260501_2100_add_sources_articles.py  20260501_2200_add_provider_call_logs.py  20260501_2300_add_event_clusters.py  20260502_0000_add_agenda_cards.py  20260502_0100_add_generations.py  20260502_0200_add_takedown_requests.py  20260502_1100_add_email_tables.py  20260502_1500_add_chunks_trgm_index.py  20260502_1600_add_provider_log_cached_tokens.py  20260502_1700_add_agenda_hierarchy.py  20260502_1800_add_eval_runs.py  20260502_1900_add_agenda_country.py  20260503_1000_add_app_settings.py  20260503_1400_add_app_prompts.py  20260505_1500_image_pipeline_vlm_refactor.py  20260506_1500_articles_archived_at.py  20260506_1830_chunk_embedding_binary.py  20260507_1500_pmf_survey_responses.py  20260508_1900_failed_jobs_severity.py  20260508_2030_discovered_timeout_backfill.py  20260508_2100_aa_extract_warning_backfill.py  20260508_2200_article_images_error_message.py  20260508_2300_archive_stale_failed_articles.py  20260508_2330_image_failed_processed_at_backfill.py  20260509_0000_vlm_caption_json_repair.py  20260509_0100_archive_stuck_discovered_duplicates.py  20260509_0200_foreign_transfer_consent_metadata.py  20260509_0300_totp_backup_codes.py  20260509_0400_articles_external_id_dedup.py  20260509_0400_lemon_squeezy_billing_schema.py  20260509_0500_articles_external_id_dedup.py  20260509_0600_ext_id_backfill_trt_html.py  20260509_0700_style_profiles_schema.py  20260509_0800_articles_cleaned_at.py  20260509_0900_content_quality_gate_backfill.py  20260510_0100_sources_realtime_polling.py  20260510_0200_generations_sft_telemetry.py  20260510_0200_sources_polling_tier_shadow.py  (+39 more)
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/api/: _research_stream_context.py  _research_stream_helpers.py  admin_articles.py  admin_audit.py  admin_billing.py  admin_clusters.py  admin_dashboard.py  admin_entities.py  admin_media.py  admin_prompts.py  admin_queue.py  admin_rag.py  admin_settings.py  admin_sft.py  admin_sources.py  admin_system.py  admin_trends.py  admin_users.py  app_automation.py  app_chat.py  app_chat_stream.py  app_consent.py  app_generate.py  app_generate_stream.py  app_me.py  app_research.py  app_research_stream.py  auth.py  auth_2fa.py  billing.py  health.py  legal.py  public_search.py  style_profiles.py  webhooks_lemonsqueezy.py
apps/api/app/core/: _extractor_filters.py  _retrieval_affinity.py  _retrieval_agenda.py  _retrieval_chunks.py  _retrieval_fetch.py  _retrieval_ner.py  _retrieval_parent.py  _retrieval_phrase.py  _retrieval_scoring.py  _retrieval_settings.py  _retrieval_vector.py  answer_quality.py  answer_span.py  celery_introspect.py  chat_cache_telemetry.py  chat_tools.py  chunker.py  citation.py  cleaning.py  clustering.py  content_quality.py  conversation_context.py  cost_tracker.py  data_sufficiency.py  db.py  deps.py  embedding_binary.py  entity_noise.py  extractor.py  http_client.py  json_utils.py  maintenance_tracker.py  media.py  media_suggest.py  ner_stats.py  pii.py  plan_features.py  planner_cache.py  polling_tier.py  prompts_store.py  (+22 more)
apps/api/app/email/: __init__.py  service.py
apps/api/app/models/: __init__.py  agenda.py  app_prompt.py  app_setting.py  article.py  billing.py  chat_cache_telemetry.py  conversation.py  email.py  eval_run.py  event.py  generation.py  job.py  provider_log.py  research_cache_telemetry.py  research_cluster.py  source.py  style_profile.py  takedown.py  training_sample.py  user.py
apps/api/app/modules/: __init__.py
apps/api/app/prompts/: __init__.py  agenda_card.py  artifact_revision.py  chat_answer.py  chat_followup.py  chunk_keywords.py  content_generator.py  country_backfill.py  hyde.py  meta_query.py  ner.py  query_clarification.py  query_decomposition.py  query_planner.py  query_rewrite.py  research_answer.py  research_followup.py  style_analyzer.py  weekly_summary.py
apps/api/app/providers/: base.py  deepseek.py  gemini.py  lemonsqueezy.py  local_e5.py  local_embedding.py  local_jina_rerank.py  local_rerank.py  nim.py  nim_chat.py  nim_rerank.py  nim_vlm.py  registry.py  wikipedia.py
apps/api/app/shared/: __init__.py
apps/api/app/workers/: celery_app.py
apps/api/scripts/: backfill_agenda_embeddings.py  backfill_chunk_keywords.py  backfill_chunk_keywords_parallel.py  backfill_microchunks.py  cleanup_bianet_bogus_images.sql  embed_pending_chunks.py  eval_rerank_ab.py  eval_retrieval.sh  lint_relationship_pattern.py  sft_push_hf.py
apps/api/tests/: conftest.py
apps/api/tests/eval/: __init__.py  ab_test_bgem3_vs_e5.py  framework.py  grounding_harness.py  niche_chunks_benchmark.py  niche_chunks_benchmark_v2.py  retrieval_benchmark.py  test_grounding_harness.py  test_pii_eval.py  test_prompt_eval.py
apps/api/tests/integration/: test_admin_rag_sql.py  test_admin_trends_sql.py  test_canonical_admin_sql.py  test_clusters_refresh.py  test_entity_trends.py  test_nim_embedding.py  test_record_failure_539.py  test_seed_bakinazik_sources.py  test_seed_gundem_sources.py  test_testcontainers_smoke.py  test_trend_read_path.py  test_trend_worker.py
apps/api/tests/migration/: __init__.py  test_artifact_curator.py  test_artifact_quick_actions.py  test_artifact_revisions.py  test_artifacts_service.py  test_automation_content.py  test_automation_schema.py  test_automation_studio_api.py  test_automation_triggers.py  test_canonical_admin_invariants.py  test_cluster_anchor.py  test_cluster_link.py  test_cluster_merge.py  test_discover_rising.py  test_fresh_upgrade.py  test_kume_subscription_artifacts.py  test_notifications.py  test_subscription_endpoints.py  test_subscription_service.py  test_training_samples_kume_shape.py  test_trend_corpus_normalization.py  (+1 more)
(+852 files in other folders)
