[project]
name = "nodrat-api"
version = "0.1.0"
description = "Nodrat API + Worker — Türkçe gündem RAG SaaS backend"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Selman Ay", email = "legal@nodrat.com" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Settings & validation
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Database (async)
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",

    # Auth
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.17",
    "pyotp>=2.9.0",  # #56 — TOTP 2FA (RFC 6238)

    # Cache & queue
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",

    # Storage
    "boto3>=1.35.0",          # MinIO S3 API uyumlu
    "minio>=7.2.10",

    # HTTP client (scraper)
    "httpx>=0.28.0",

    # HTML parsing & extraction
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "trafilatura>=1.12.0",
    "feedparser>=6.0.11",     # RSS

    # Embedding — local primary (#163, PR-8 #223 MVP-1.5)
    # VPS 40 (484 GB NVMe) yeterli; sentence-transformers + bge-m3 image'a preload
    # USE_LOCAL_EMBEDDING=true (default) — NIM fallback olarak kalır
    "sentence-transformers>=3.3.0",
    # torch CPU wheel index'ten install edilir (Dockerfile RUN'da extra-index-url)
    # #760 — Jina Reranker v2 multilingual gereksinimleri:
    #   - einops: custom XLM-RoBERTa modeling file trust_remote_code load anında
    #   - transformers <5.0: Jina'nın 2024 modeling kodu transformers 4.x API'sine
    #     dayalı (create_position_ids_from_input_ids public symbol). 5.0'da
    #     refactor ile kaldırıldı → ImportError. Üst sınır=5.0 ile 4.x'e pin.
    "einops>=0.8.0",
    "transformers>=4.45,<5.0",

    # Crypto / PII redaction
    "cryptography>=43.0.0",   # Fernet for provider keys

    # Language detection
    "langdetect>=1.0.9",

    # Logging & observability
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "psutil>=6.1.0",  # #358 — system health (VPS CPU/RAM/disk)
    "docker>=7.0.0",  # #570 — admin disk panel (host docker df + builder prune)

    # Email
    "resend>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres,redis,minio]>=4.8.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.2",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "types-beautifulsoup4",
    "types-lxml",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# -----------------------------------------------------------------------------
# Ruff (lint + format)
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "S",                # bandit (security)
    "C4",               # comprehensions
    "SIM",              # simplify
    "PTH",              # use pathlib
    "RUF",              # ruff-specific
]
ignore = [
    "S101",             # assert in tests OK
    "B008",             # FastAPI Depends() default
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "S105", "S106"]
"alembic/**/*" = ["E501"]

# -----------------------------------------------------------------------------
# Black (format — ruff format de yeterli, ama Black backup)
# -----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]

# -----------------------------------------------------------------------------
# Mypy (strict typing)
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["langdetect.*", "trafilatura.*"]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: unit tests (fast, no external deps)",
    "integration: integration tests (need DB/Redis/MinIO)",
    "eval: LLM evaluation tests (need provider key, costs $)",
]

[tool.coverage.run]
omit = [
    "alembic/*",
    "tests/*",
    "app/main.py",     # entry point
]
