[project]
name = "nodrat-api"
version = "0.1.0"
description = "Nodrat API + Worker — Türkçe gündem RAG SaaS backend"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Selman Ay", email = "legal@nodrat.com" }]

dependencies = [
    # Web framework
    # NOT (#1501): fastapi/starlette üst sınırlı. starlette 1.1+ app.routes'a
    # `.path`'siz `_IncludedRouter` koyuyor → route-introspection unit testleri
    # kırılıyor. CI `pip install -e .` uv.lock'u yok saydığından üst sınır
    # olmadan en güncele uçuyordu. uv.lock = fastapi 0.136.1 / starlette 1.0.0.
    "fastapi>=0.115.0,<0.137",
    "starlette>=1.0.0,<1.1",
    "uvicorn[standard]>=0.32.0",

    # Settings & validation
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Database (async)
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",

    # Auth
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.17",
    "pyotp>=2.9.0",  # #56 — TOTP 2FA (RFC 6238)

    # Cache & queue
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",

    # Storage
    "boto3>=1.35.0",          # MinIO S3 API uyumlu
    "minio>=7.2.10",

    # HTTP client (scraper)
    "httpx>=0.28.0",

    # HTML parsing & extraction
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "trafilatura>=1.12.0",
    "feedparser>=6.0.11",     # RSS

    # Embedding — local primary (#163, PR-8 #223 MVP-1.5)
    # VPS 40 (484 GB NVMe) yeterli; sentence-transformers + bge-m3 image'a preload
    # USE_LOCAL_EMBEDDING=true (default) — NIM fallback olarak kalır
    "sentence-transformers>=3.3.0",
    # torch CPU wheel index'ten install edilir (Dockerfile RUN'da extra-index-url)

    # Crypto / PII redaction
    "cryptography>=43.0.0",   # Fernet for provider keys

    # Language detection
    "langdetect>=1.0.9",

    # Logging & observability
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "psutil>=6.1.0",  # #358 — system health (VPS CPU/RAM/disk)
    "docker>=7.0.0",  # #570 — admin disk panel (host docker df + builder prune)

    # Email
    "resend>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres,redis,minio]>=4.8.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.2",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-beautifulsoup4",
    "types-lxml",
    "types-pyyaml",
    "import-linter>=2.1",  # Modular Monolith boundary CI (Phase 1+)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# -----------------------------------------------------------------------------
# Ruff (lint + format)
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "S",                # bandit (security)
    "C4",               # comprehensions
    "SIM",              # simplify
    "PTH",              # use pathlib
    "RUF",              # ruff-specific
]
ignore = [
    "S101",             # assert in tests OK
    "B008",             # FastAPI Depends() default
    # Kod tabanı bilerek Türkçe (CLAUDE.md §1.2 hard kural). RUF001/002/003
    # ambiguous-unicode kuralları İngilizce/ASCII kod tabanları için
    # homoglyph-korumasıdır; ı/ş/ç/ğ/ö/ü kasıtlı → kategorik kapalı.
    "RUF001",           # string literal — ambiguous unicode
    "RUF002",           # docstring — ambiguous unicode
    "RUF003",           # comment — ambiguous unicode
    # Satır uzunluğu ruff-format'ın işi; uzun Türkçe string/SQL
    # bölünemez. alembic'te zaten ignore'luydu → global.
    "E501",             # line-too-long (formatter-owned)
]

[tool.ruff.lint.per-file-ignores]
# Test/eval dosyaları fixture/script: mock-class mutable default, plain
# open(), iç içe with/if = stil-gürültüsü (correctness değil) → relax.
"tests/**/*" = [
    "S101", "S105", "S106",
    "RUF012", "PTH123", "SIM117", "SIM102", "SIM108", "SIM105",
]
# Alembic DDL: identifier (tablo/constraint) bind-param'lanamaz; migration-içi
# SABİT değerlerle string SQL = incelenmiş S608 false-positive (retrieval.py
# precedent'i ile aynı sınıf). Gelecek DDL migration'larını da kapsar.
"alembic/**/*" = ["E501", "S608"]
# Script'ler sys.path / env setup'ını import'lardan önce yapar (yapısal).
"scripts/**/*" = ["E402"]
# Hybrid-search SQL: f-string interpolasyonları kod-kontrollü fragment
# (title_norm_sql vb.); tüm değerler bound param (:vec/:start). User-string
# yok → bandit S608 false-positive sınıfı (incelendi, 16 nokta).
# v3 P5 deep-split: retrieval.py'den çıkan _retrieval_* submodülleri AYNI sabit-yapı
# SQL'i taşır (aynı incelenmiş false-positive sınıfı) → glob ile kapsanır.
"app/core/retrieval.py" = ["S608"]
"app/core/_retrieval_*.py" = ["S608"]

# -----------------------------------------------------------------------------
# Mypy (strict typing)
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["langdetect.*", "trafilatura.*"]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: unit tests (fast, no external deps)",
    "integration: integration tests (need DB/Redis/MinIO)",
    "eval: LLM evaluation tests (need provider key, costs $)",
]

[tool.coverage.run]
omit = [
    "alembic/*",
    "tests/*",
    "app/main.py",     # entry point
]

# -----------------------------------------------------------------------------
# Import Linter — Modular Monolith boundary enforcement (Phase 1+)
#
# Strict scope: app.modules.* and app.shared.*
# Report-only scope (Phase 1): legacy app.core.* and app.api.* (no contracts yet)
#
# See:
#   - wiki/decisions/import-direction-rules.md
#   - wiki/decisions/modular-monolith-boundary.md
#   - wiki/plans/modular-monolith-transition-master-plan.md §3
# -----------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["app"]
include_external_packages = false

# Shared infrastructure must not depend on domain modules.
[[tool.importlinter.contracts]]
name = "shared/* must not import from modules/*"
type = "forbidden"
source_modules = ["app.shared"]
forbidden_modules = ["app.modules"]

# Kernel: sources is the deepest layer.
[[tool.importlinter.contracts]]
name = "sources/ must not import any other domain module"
type = "forbidden"
source_modules = ["app.modules.sources"]
forbidden_modules = [
    "app.modules.articles",
    "app.modules.crawler",
    "app.modules.rag",
    "app.modules.generations",
    "app.modules.clusters",
    "app.modules.entities",
    "app.modules.media",
    "app.modules.style_profiles",
    "app.modules.sft",
    "app.modules.billing",
    "app.modules.legal",
    "app.modules.prompts_admin",
    "app.modules.settings_admin",
    "app.modules.ops",
    "app.modules.public",
]
# NOT (T7-7 R2 / v104): `app.modules.accounts` bu listeden çıkarıldı. Gerekçe:
# sources strict-forbidden contract'ı sources'ı BUSINESS domain'lerden
# (articles/rag/generations/...) izole eder; accounts ise "parallel" auth/
# identity katmanı (cross-cutting altyapı — require_admin her admin router'ın
# ihtiyacı). sources/admin/routes.py require_admin (User-bağlı auth gate)
# kullanır; auth enforcement birebir korunur. Bkz. wiki/decisions/
# modular-monolith-boundary.md (R2 refinement) + [[t7-7-deps-split-mini-plan]] §4.

# Kernel: articles can read sources but not upper layers.
[[tool.importlinter.contracts]]
name = "articles/ must not import upper layers"
type = "forbidden"
source_modules = ["app.modules.articles"]
forbidden_modules = [
    "app.modules.crawler",
    "app.modules.rag",
    "app.modules.clusters",
    "app.modules.generations",
]

# Middle: embedding must not depend on upper layers.
[[tool.importlinter.contracts]]
name = "embedding/ must not import upper layers"
type = "forbidden"
source_modules = ["app.modules.embedding"]
forbidden_modules = [
    "app.modules.rag",
    "app.modules.generations",
]

# Middle: crawler must not depend on rag or generations.
[[tool.importlinter.contracts]]
name = "crawler/ must not import rag or generations"
type = "forbidden"
source_modules = ["app.modules.crawler"]
forbidden_modules = [
    "app.modules.rag",
    "app.modules.generations",
]

# Middle: rag must not depend on crawler or generations.
[[tool.importlinter.contracts]]
name = "rag/ must not import crawler or generations"
type = "forbidden"
source_modules = ["app.modules.rag"]
forbidden_modules = [
    "app.modules.crawler",
    "app.modules.generations",
]

# Middle: clusters must not depend on upper layers.
[[tool.importlinter.contracts]]
name = "clusters/ must not import upper layers"
type = "forbidden"
source_modules = ["app.modules.clusters"]
forbidden_modules = [
    "app.modules.rag",
    "app.modules.generations",
]

# Middle: entities must not depend on upper layers.
[[tool.importlinter.contracts]]
name = "entities/ must not import upper layers"
type = "forbidden"
source_modules = ["app.modules.entities"]
forbidden_modules = [
    "app.modules.rag",
    "app.modules.generations",
]

# Middle: media must not depend on upper layers.
[[tool.importlinter.contracts]]
name = "media/ must not import upper layers"
type = "forbidden"
source_modules = ["app.modules.media"]
forbidden_modules = [
    "app.modules.rag",
    "app.modules.generations",
]

# Middle: style_profiles must not depend on upper layers.
[[tool.importlinter.contracts]]
name = "style_profiles/ must not import upper layers"
type = "forbidden"
source_modules = ["app.modules.style_profiles"]
forbidden_modules = [
    "app.modules.rag",
    "app.modules.generations",
]

# Middle: sft does not reach into crawler internals (uses articles instead).
[[tool.importlinter.contracts]]
name = "sft/ must not import crawler"
type = "forbidden"
source_modules = ["app.modules.sft"]
forbidden_modules = [
    "app.modules.crawler",
]

# Parallel: accounts stays independent of business modules.
[[tool.importlinter.contracts]]
name = "accounts/ must not import business modules"
type = "forbidden"
source_modules = ["app.modules.accounts"]
forbidden_modules = [
    "app.modules.billing",
    "app.modules.generations",
    "app.modules.rag",
    "app.modules.articles",
    "app.modules.sources",
]

# Cross-cutting: ops is read-by-modules upward; no module imports ops.
[[tool.importlinter.contracts]]
name = "domain modules must not import ops/"
type = "forbidden"
source_modules = [
    "app.modules.sources",
    "app.modules.articles",
    "app.modules.crawler",
    "app.modules.rag",
    "app.modules.clusters",
    "app.modules.entities",
    "app.modules.media",
    "app.modules.style_profiles",
    "app.modules.sft",
    "app.modules.accounts",
    "app.modules.billing",
    "app.modules.legal",
    "app.modules.prompts_admin",
    "app.modules.settings_admin",
    "app.modules.generations",
    "app.modules.public",
]
forbidden_modules = ["app.modules.ops"]

# Cross-cutting: automation is the TOP orchestrator (reads generations + trends
# upward); no module imports automation (ops pattern). #1779 Faz 5.0.
[[tool.importlinter.contracts]]
name = "domain modules must not import automation/"
type = "forbidden"
source_modules = [
    "app.modules.sources",
    "app.modules.articles",
    "app.modules.crawler",
    "app.modules.rag",
    "app.modules.clusters",
    "app.modules.entities",
    "app.modules.media",
    "app.modules.style_profiles",
    "app.modules.sft",
    "app.modules.accounts",
    "app.modules.billing",
    "app.modules.legal",
    "app.modules.prompts_admin",
    "app.modules.settings_admin",
    "app.modules.generations",
    "app.modules.trends",
    "app.modules.ops",
    "app.modules.public",
]
forbidden_modules = ["app.modules.automation"]

# Layer 0 purity: shared/* must not depend on legacy core/api/models layers.
# Phase 8 PR-8a-2: added after shared/extraction → core/site_profiles leak fix
# (PR-8a-1 #1247) — site_profiles taşındı shared/extraction/ altına. Audit
# (2026-05-24): 0 remaining shared→core/api/models leak.
[[tool.importlinter.contracts]]
name = "shared/* must not import legacy core/api/models"
type = "forbidden"
source_modules = ["app.shared"]
forbidden_modules = ["app.core", "app.api", "app.models"]

# Core kernel direction: app/core/* is the kernel layer; it must not import
# either domain modules (app.modules.*) or HTTP surface (app.api.*). Phase 8
# PR-8a-4: added after the only known leak (core/retrieval.py → modules/entities
# ner_stats) was fixed by PR-8a-3 #1249 (ner_stats moved to shared/observability/).
# Audit (2026-05-24): 0 remaining core→modules leak, 0 core→api leak.
[[tool.importlinter.contracts]]
name = "core/* must not import modules/*"
type = "forbidden"
source_modules = ["app.core"]
forbidden_modules = ["app.modules"]

[[tool.importlinter.contracts]]
name = "core/* must not import api/*"
type = "forbidden"
source_modules = ["app.core"]
forbidden_modules = ["app.api"]
